--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -250,7 +250,7 @@
   <li>If such a file would still not exist, the last fallback is to use is the standard Theme <code>templates/2k11/entries.tpl</code>.</li>
 </ul>
 
-<p>So for simple extended themes, an “ENGINE: 2k11” would suffice best!</p>
+<p>So for simple extended themes, an “Engine: 2k11” would suffice best!</p>
 
 <p>So make sure that you only copy over those files to your theme directory which you are really going to customize!</p>
 
