--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -252,7 +252,7 @@
 
 <p>So for simple extended themes, an “Engine: 2k11” would suffice best!</p>
 
-<p>So make sure that you only copy over those files to your theme directory which you are really going to customize!</p>
+<p>Make sure that you only copy over those files to your theme directory which you are really going to customize!</p>
 
 <h3 id="docs-frontend-themes">Frontend Themes</h3>
 
