hc: Optimize head length and remove non-guided arrow-left backlinks

--- a/hc/en/spam.html
+++ b/hc/en/spam.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Blocking SPAM</h1>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Blocking SPAM</h1>
                     <ul class="document-nav">
                         <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
                         <li class="document-current">« Blocking SPAM »</li>
