--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -91,8 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Templating</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Templating</h1>
                     <h2 id="docs-themes-and-smarty-templating">Themes and Smarty Templating</h2>
 
                     <ul>
