--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -91,9 +91,8 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Code primers</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
-<h2>Code primer</h2>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Code primers</h1>
+                    <h2>Code primer</h2>
 
 <ul id="markdown-toc">
   <li><a href="#docs-the-core" id="toc-docs-the-core">The “core”</a>
