--- a/hc/en/conditional-get.html
+++ b/hc/en/conditional-get.html
@@ -91,8 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Conditional GET</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Conditional GET</h1>
                     <h2 id="docs-conditional-get-for-rss-feeds">Conditional get for RSS feeds</h2>
 
                     <p>Serendipity supports an HTTP-cache compatible way of only showing items in an RSS feed which where modified since the last request from a client.</p>
