--- a/hc/en/functions.html
+++ b/hc/en/functions.html
@@ -91,8 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - API functions</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - API functions</h1>
                     <h2 id="docs-important-api-functions">Important API functions</h2>
 
                     <p>We have created separate bundles for specific API functions. An overview of most relevant functions and where they are defined can be found here:</p>
