--- a/hc/en/i18n.html
+++ b/hc/en/i18n.html
@@ -91,8 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Languages</h1>
-                    <p><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></p>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Languages</h1>
                     <h2 id="docs-languagesi18n">Languages/i18n</h2>
 
 <p>s9y is fully compatible to be used in a native language and supports native and UTF-charsets, timezones and entity-encoding. Apart from the bundled languages (english, german, danish, czech, french, spanish and many others) you can easily translate the strings into your language. Given that you can read at least one of the mentioned languages. :-)</p>
