--- a/hc/en/user-management.html
+++ b/hc/en/user-management.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en]">⌘</a></span> - Users</h1>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Users</h1>
                     <ul class="document-nav">
                         <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
                         <li class="document-current">« Users »</li>
