--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Serendipity Styx Edition - Help Center [en] | ophian.github.io</title>
+    <title>Serendipity Styx Edition - Help Center [en] | The Backend | ophian.github.io</title>
     <meta charset="UTF-8">
     <meta name="description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Serendipity Styx Edition - Help Center [en] | Styx is what Serendipity should be | ophian.github.io">
+    <meta property="og:title" content="Serendipity Styx Edition - Help Center [en] | The Backend | Styx is what Serendipity should be | ophian.github.io">
     <meta property="og:site_name" content="Serendipity Styx Blog System">
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
-    <meta property="og:url" content="https://ophian.github.io/">
+    <meta property="og:url" content="https://ophian.github.io/hc/en/admin-interface.html">
     <link rel="canonical" href="https://ophian.github.io/hc/en/admin-interface.html">
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
@@ -91,10 +91,10 @@
             </div>
             <div class="col-document__wrapper col-document__wrapper-documents">
                 <div class="col-document">
-                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - Backend</h1>
+                    <h1><span class="hc-home"><a href="index.html" title="Styx Help Center [en] - Documentation">⌘</a></span> Styx - The Backend</h1>
                     <ul class="document-nav">
-                        <li class="document-up"><a href="index.html"><span class="icon arrow-left">←</span> back to main page</a></li>
-                        <li class="document-current">« Backend »</li>
+                        <li class="document-pref"><a href="installation.html"><span class="icon arrow-left">←</span> Installation</a></li>
+                        <li class="document-current">« The Backend »</li>
                         <li class="document-next"><a href="posting-blog-entry.html">Posting Entries <span class="icon arrow-right">→</span></a></li>
                     </ul>
                     <h2 id="docs-admin-interface">Admin interface</h2>
