--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Serendipity Styx Edition - Help Center [en] | ophian.github.io</title>
+    <title>Serendipity Styx Edition - Help Center [en] | Plugin-API | ophian.github.io</title>
     <meta charset="UTF-8">
     <meta name="description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Serendipity Styx Edition - Help Center [en] | Styx is what Serendipity should be | ophian.github.io">
+    <meta property="og:title" content="Serendipity Styx Edition - Help Center [en] | Plugin-API | Styx is what Serendipity should be | ophian.github.io">
     <meta property="og:site_name" content="Serendipity Styx Blog System">
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
-    <meta property="og:url" content="https://ophian.github.io/">
+    <meta property="og:url" content="https://ophian.github.io/hc/en/plugin-api.html">
     <link rel="canonical" href="https://ophian.github.io/hc/en/plugin-api.html">
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
